[[example]]
name = 'simple'

[[example]]
name = 'image'

[dependencies]
rusttype = '0.7.2'

[dependencies.piston2d-graphics]
optional = true
version = '0.26.0'

[dependencies.graphics_buffer]
optional = true
version = '*'

[features]
default = ['graphics']
graphics = ['piston2d-graphics']
buffer = ['graphics_buffer']

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
name = 'pane'
version = '0.1.0'
