[[example]]
name = 'simple'

[dependencies]
rusttype = '0.7.2'

[dependencies.graphics_buffer]
optional = true
version = '0.4.2'

[dependencies.piston2d-graphics]
optional = true
version = '0.27.0'

[features]
buffer = ['graphics_buffer']
default = [
    'graphics',
    'buffer',
]
graphics = ['piston2d-graphics']

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
description = 'Align text inside of resizable rectangular panes'
documentation = 'https://docs.rs/pane/'
repository = 'https://github.com/kaikalii/pane'
license = 'MIT'
name = 'pane'
readme = 'readme.md'
version = '0.1.2'
keywords = [
    "text",
    "align",
    "render",
    "font",
    "word"
]
categories = [
    "gui",
    "rendering"
]
